--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,14 @@ rvm:
   - 2.3.1
   - 2.2.7
 
+matrix:
+    allow_failures:
+          - gemfile: gemfiles/spree_master.gemfile
+
 gemfile:
-  - gemfiles/spree_3_1.gemfile
   - gemfiles/spree_3_2.gemfile
   - gemfiles/spree_3_3.gemfile
+  - gemfiles/spree_3_4.gemfile
   - gemfiles/spree_master.gemfile
 
 before_install:
