--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,45 @@
 sudo: required
 dist: trusty
 
+language: ruby
+
+env:
+  - DB=postgres
+  - DB=mysql
+
+addons:
+  chrome: stable
+  postgresql: 9.4
+
+gemfile:
+  - gemfiles/spree_3_5.gemfile
+  - gemfiles/spree_3_7.gemfile
+  - gemfiles/spree_4_0.gemfile
+  - gemfiles/spree_master.gemfile
+
 script:
   - bundle exec rake test_app
   - bundle exec rake spec
 
-addons:
-  chrome: stable
-
-env:
-  - DB=mysql
-  - DB=postgres
-
-language: ruby
-
 rvm:
-  - 2.3.3
-  - 2.4.2
-  - 2.5.2
+  - 2.5.1
+  - 2.4.4
+  - 2.3.8
 
 matrix:
-    allow_failures:
-          - gemfile: gemfiles/spree_master.gemfile
-
-gemfile:
-  - gemfiles/spree_3_2.gemfile
-  - gemfiles/spree_3_5.gemfile
-  - gemfiles/spree_3_7.gemfile
-  - gemfiles/spree_master.gemfile
+  allow_failures:
+    - gemfile: gemfiles/spree_master.gemfile
+  exclude:
+    - rvm: 2.3.8
+      gemfile: gemfiles/spree_4_0.gemfile
+    - rvm: 2.4.4
+      gemfile: gemfiles/spree_4_0.gemfile
+    - rvm: 2.3.8
+      gemfile: gemfiles/spree_master.gemfile
+    - rvm: 2.4.4
+      gemfile: gemfiles/spree_master.gemfile
+    - rvm: 2.5.1
+      gemfile: gemfiles/spree_3_5.gemfile
 
 before_install:
   - mysql -u root -e "GRANT ALL ON *.* TO 'travis'@'%';"
